# kohonen_som

./: kohonen.ipynb  pyproject.toml  train.py
