[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kohonen"
authors = [
    {name = "Muraleekrishna Gopinathan", email = "gmuraleekrishna@outlook.com"},
]
description = "My Kohonen SOM"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["one", "two"]
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "matplotlib",
    'importlib-metadata; python_version<"3.10"',
]
dynamic = ["version"]

[project.scripts]
my-script = "kohonen.kohonen:main"